Bug 77051 - atkbd.c : one more device need be added to quirks list.
Summary: atkbd.c : one more device need be added to quirks list.
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Input Devices (show other bugs)
Hardware: i386 Linux
: P1 blocking
Assignee: drivers_input-devices
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-28 17:18 UTC by Georgios Tsalikis
Modified: 2014-10-14 00:52 UTC (History)
2 users (show)

See Also:
Kernel Version: 3.15-RC7
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Georgios Tsalikis 2014-05-28 17:18:04 UTC
LG notebooks have suffered from a bug making their keyboard non-functional. In this kernel version a fixup is applied. In the struct there are two LG laptops listed. Not mine. Here is my DMI data:

Handle 0x0001, DMI type 1, 27 bytes
System Information
        Manufacturer: LG Electronics
        Product Name: LG
        Version: Not Applicable
        Serial Number: xxxxxxxxxxxx
        UUID: 004D7C6E-9F65-0010-A040-xxxxxxxxxxxx
        Wake-up Type: Power Switch
        SKU Number: Not Specified
        Family: Not Specified

Handle 0x0002, DMI type 2, 8 bytes
Base Board Information
        Manufacturer: LG Electronics
        Product Name: ROCKY
        Version: Not Applicable
        Serial Number: Not Applicable
Comment 1 Dmitry Torokhov 2014-05-28 20:56:07 UTC
I suppose you are talking about force-release quirk. That should be handled by systemd/udev now, not in kernel. The quirks you see in kernel are there for historical reasons, before we allowed userspace control force release mask.
Comment 2 Georgios Tsalikis 2014-05-28 21:35:55 UTC
no it is for the atkbd_deactivate_fixup that resolves the problem for certain LG laptops.

currently line 1792 of atkbd.c
Comment 3 Georgios Tsalikis 2014-05-29 13:17:00 UTC
This is the relevant commit that lacks a match for my model:
https://git.kernel.org/cgit/linux/kernel/git/torvalds/linux.git/commit/drivers/input/keyboard/atkbd.c?id=3d725caa9dcc78c3dc9e7ea0c04f626468edd9c9               |
Comment 4 Georgios Tsalikis 2014-05-29 23:49:53 UTC
Adding this to atkbd.c quirks works well for me.

        {
		.matches = {
			DMI_MATCH(DMI_SYS_VENDOR, "LG Electronics"),
			DMI_MATCH(DMI_PRODUCT_NAME, "LG"),
		},
		.callback = atkbd_deactivate_fixup,
	},
Comment 5 Dmitry Torokhov 2014-10-14 00:52:40 UTC
Should be fixed with:

commit c01206796139e2b1feb7539bc72174fef1c6dc6e
Author: Dmitry Torokhov <dmitry.torokhov@gmail.com>
Date:   Wed Sep 10 13:50:37 2014 -0700                                                                                 
                                                                                                                       
    Input: atkbd - do not try 'deactivate' keyboard on any LG laptops                                                  
                                                                                                                       
    We are getting more and more reports about LG laptops not having                                                   
    functioning keyboard if we try to deactivate keyboard during probe.                                                 
    Given that having keyboard deactivated is merely "nice to have"                                                     
    instead of a hard requirement for probing, let's disable it on all                                                  
    LG boxes instead of trying to hunt down particular models.                                                           
                                                                                                                         
    This change is prompted by patches trying to add "LG Electronics"/"ROCKY"                                              
    and "LG Electronics"/"LW60-F27B" to the DMI list.                                                                       
                                                                                                                            
    https://bugzilla.kernel.org/show_bug.cgi?id=77051                                                                       
                                                                                                                            
    Cc: stable@vger.kernel.org                                                                                              
    Reported-by: Jaime Velasco Juan <jsagarribay@gmail.com>
    Reported-by: Georgios Tsalikis <georgios@tsalikis.net>
    Tested-by: Jaime Velasco Juan <jsagarribay@gmail.com>
    Signed-off-by: Dmitry Torokhov <dmitry.torokhov@gmail.com>

Note You need to log in before you can comment on or make changes to this bug.